added mongo connection

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=8000
 SERVER_API_PREFIX_V1= api/v1
 SERVER_BASE_PATH=localhost
+DB_HOST=cluster0.urdds.mongodb.net
+DB_USER=kvvik2020
+DB_PASSWORD=nokia220
+DB_NAME=spamlist
